Updates to VDEM, FH, and EIU bibliographic entries.

--- a/data-raw/bibfile.bib
+++ b/data-raw/bibfile.bib
@@ -99,12 +99,12 @@
    doi = {10.1017/S0043887100016580}
 }
 
-@techreport{fh2022,
+@techreport{fh2023,
    author = {{Freedom House}},
-   title = {Freedom in the World 2022: The Global Expansion of Authoritarian Rule},
+   title = {Freedom in the World 2023: Marking 50 Years in the Struggle for Democracy},
    institution = {Freedom House},
-   url = {https://freedomhouse.org/report/freedom-world/2022/global-expansion-authoritarian-rule},
-   year = {2022}
+   url = {https://freedomhouse.org/report/freedom-world/2023/marking-50-years},
+   year = {2023}
 }
 
 @article{gwf2014,
@@ -350,21 +350,24 @@
    url = {http://urn.fi/urn:nbn:fi:fsd:T-FSD1289}
 }
 
-@Misc{vdem11dataset,
-  title = {{V-Dem Country-Year/Country-Date Dataset v12}},
-  author = {Coppedge, Michael and John Gerring and Carl Henrik Knutsen and Staffan I. Lindberg and Jan Teorell and Nazifa Alizada and David Altman and Michael Bernhard and Agnes Cornell and M. Steven Fish and Lisa Gastaldi and Haakon Gjerløw and Adam Glynn and Sandra Grahn and Allen Hicken and Garry Hindle and Nina Ilchenko and Katrin Kinzelbach and Joshua Krusell and Kyle L. Marquardt and Kelly McMann and Valeriya Mechkova and Juraj Medzihorsky and Pamela Paxton and Daniel Pemstein and Josefine Pernes and Oskar Rydén and Johannes {von Römer} and Brigitte Seim and Rachel Sigman and Svend-Erik Skaaning and Jeffrey Staton and Aksel Sundström and Eitan Tzelgov and Yi-ting Wang and Tore Wig and Steven Wilson and Daniel Ziblatt},
-  institution = {Varieties of Democracy (V-Dem) Project},
-  year = {2022},
-  url = {https://doi.org/10.23696/vdemds22},
+@techreport{vdem13measurement,
+    author = {Pemstein, Daniel and Marquardt, Kyle L. and Tzelgov, Eitan and Wang, Yi-ting and Medzihorsky, Juraj and Krusell, Joshua and Miri, Farhad and von Römer, Johannes},
+    title = {{The V-Dem Measurement Model: Latent Variable Analysis for Cross-National and Cross-Temporal Expert-Coded Data}},
+    institution = {Varieties of Democracy Institute, University of Gothenburg},
+    year = {2022},
+    number = {21},
+    edition = {7th},
+    url = {https://www.v-dem.net/media/filer_public/25/cb/25cb3f3f-290d-46e1-8eaf-ff2d2c13f4a9/v-dem_working_paper_21.pdf}
 }
 
-@Misc{vdem11codebook,
-  title = {{V-Dem Codebook v12}},
-  author = {Coppedge, Michael and John Gerring and Carl Henrik Knutsen and Staffan I. Lindberg and Jan Teorell and David Altman and and Michael Bernhard and Agnes Cornell and M. Steven Fish and Lisa Gastaldi and Haakon Gjerløw and Adam Glynn and Sandra Grahn and Allen Hicken and Katrin Kinzelbach and Kyle L. Marquardt and Kelly McMann and Valeriya Mechkova and Pamela Paxton and Daniel Pemstein and Josefine Pernes and Johannes {von Römer} and Brigitte Seim and Rachel Sigman and Svend-Erik Skaaning and Jeffrey Staton and Eitan Tzelgov and Luca Uberti and Yi-ting Wang and Tore Wig and Steven Wilson and Daniel Ziblatt},
-  institution = {Varieties of Democracy (V-Dem) Project},
-  year = {2022},
-  url = {https://www.v-dem.net/static/website/img/refs/codebookv12.pdf},
+@misc{vdem13codebook,
+    author = {Coppedge, Michael and Gerring, John and Knutsen, Carl Henrik and Lindberg, Staffan I. and Teorell, Jan and Altman, David and Bernhard, Michael and Cornell, Agnes and Fish, M. Steven and Gastaldi, Lisa and Gjerløw, Haakon and Glynn, Adam and Grahn, Sandra and Hicken, Allen and Kinzelbach, Katrin and Marquardt, Kyle L. and McMann, Kelly and Mechkova, Valeriya and Neundorf, Anja and Paxton, Pamela and Pemstein, Daniel and Rydén, Oskar and von Römer, Johannes and Seim, Brigitte and Sigman, Rachel and Skaaning, Svend-Erik and Staton, Jeffrey and Sundström, Aksel and Tzelgov, Eitan and Uberti, Luca and Wang, Yi-ting and Wig, Tore and Ziblatt, Daniel},
+    title = {{V-Dem Codebook v13}}},
+    year = {2023},
+    howpublished = {\url{https://www.v-dem.net/data/the-v-dem-dataset/}},
+    organization = {Varieties of Democracy (V-Dem) Project},
 }
+
 
 @article{wahman_teorell_hadenius2007,
    author = {Hadenius, Axel and Teorell, Jan},
@@ -431,11 +434,11 @@
    url = {http://github.com/xmarquez/democracyData}
 }
 
-@techreport{eiu2021,
+@techreport{eiu2023,
    author = {{The Economist Intelligence Unit}},
-   title = {Democracy Index 2021: The China Challenge},
+   title = {Democracy Index 2022: Frontline democracy and the battle for Ukraine},
    institution = {{The Economist Intelligence Unit}},
-   year = {2022}
+   year = {2023}
 }
 
 @article{svmdi2016,
