Small edits to bibliography

--- a/data-raw/bibfile.bib
+++ b/data-raw/bibfile.bib
@@ -147,7 +147,6 @@
 
 @inbook{mainwaring2014,
    author = {Mainwaring, Scott and P\'erez-Li\~{n}\'an, An\'ibal and Brinks, Daniel},
-   chapter = {Political Regimes in Latin America, 1900-2007 (with Daniel Brinks)},
    title = {Political Regimes in Latin America, 1900-2007 (with Daniel Brinks)},
    booktitle = {Democracies and Dictatorships in Latin America: Emergence, Survival, and Fall},
    publisher = {Cambridge University Press},
@@ -470,6 +469,7 @@
    number = {1},
    pages = {47-100},
    DOI = {10.1086/700936},
+   url = {https://www.journals.uchicago.edu/doi/10.1086/700936},
    year = {2019}
 }
 
