Adjustments to bibliography

--- a/data-raw/bibfile.bib
+++ b/data-raw/bibfile.bib
@@ -147,7 +147,7 @@
 
 @inbook{mainwaring2014,
    author = {Mainwaring, Scott and P\'erez-Li\~{n}\'an, An\'ibal and Brinks, Daniel},
-   title = {Political Regimes in Latin America, 1900-2007 (with Daniel Brinks)},
+   chapter = {Political Regimes in Latin America, 1900-2007 (with Daniel Brinks)},
    booktitle = {Democracies and Dictatorships in Latin America: Emergence, Survival, and Fall},
    publisher = {Cambridge University Press},
    address = {New York},
