--- a/data-raw/bibfile.bib
+++ b/data-raw/bibfile.bib
@@ -147,8 +147,8 @@
 
 @inbook{mainwaring2014,
    author = {Mainwaring, Scott and P\'erez-Li\~{n}\'an, An\'ibal and Brinks, Daniel},
+   title = {Democracies and Dictatorships in Latin America: Emergence, Survival, and Fall},
    chapter = {Political Regimes in Latin America, 1900-2007 (with Daniel Brinks)},
-   booktitle = {Democracies and Dictatorships in Latin America: Emergence, Survival, and Fall},
    publisher = {Cambridge University Press},
    address = {New York},
    year = {2014}
