New Github action version

--- a/README.Rmd
+++ b/README.Rmd
@@ -6,7 +6,7 @@ encoding: 'UTF-8'
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
   <!-- badges: start -->
-  [![R-CMD-check](https://github.com/xmarquez/democracyData/workflows/R-CMD-check/badge.svg)](https://github.com/xmarquez/democracyData/actions)
+  [![R-CMD-check](https://github.com/xmarquez/democracyData/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/xmarquez/democracyData/actions/workflows/R-CMD-check.yaml)
   <!-- badges: end -->
 
 ```{r, echo = FALSE}
