--- a/data-raw/bibfile.bib
+++ b/data-raw/bibfile.bib
@@ -1,493 +1,469 @@
-@article{LIED2015,
-   author = {Skaaning, Svend-Erik and Gerring, John and Bartusevi\v{c}ius, Henrikas},
-   title = {A Lexical Index of Electoral Democracy},
-   journal = {Comparative Political Studies},
-   volume = {48},
-   number = {12},
-   pages = {1491-1525},
-   doi = {10.1177/0010414015581050},
-   year = {2015}
-}
-
-@book{Arat1991,
-   author = {Arat, Zehra F.},
-   title = {Democracy and human rights in developing countries},
-   publisher = {Lynne Rienner Publishers},
-   address = {Boulder},
-   year = {1991}
-}
-
 @article{AnckarFredriksson2018,
-   author = {Anckar, Carsten and Fredriksson, Cecilia},
-   title = {Classifying political regimes 1800-2016: a typology and a new dataset},
-   journal = {European Political Science},
-   DOI = {10.1057/s41304-018-0149-8},
-   url = {https://doi.org/10.1057/s41304-018-0149-8},
-   year = {2018},
-   type = {Journal Article}
-}
-
-
-@article{blm2005,
-   author = {Bowman, Kirk and Lehoucq, Fabrice and Mahoney, James},
-   title = {Measuring Political Democracy: Case Expertise, Data Adequacy, and Central America},
-   journal = {Comparative Political Studies},
-   volume = {38},
-   number = {8},
-   pages = {939-970},
-   year = {2005},
-   doi = {10.1177/0010414005277083}
-}
-
-@article{bmr2007,
-   author = {Boix, Carles and Miller, Michael and Rosato, Sebastian},
-   title = {A Complete Dataset of Political Regimes, 1800-2007},
-   journal = {Comparative Political Studies},
-   volume = {46},
-   number = {12},
-   pages = {1523-1554},
-   year = {2012},
-   doi = {10.1177/0010414012463905}
-}
-
-@article{bnr2001,
-   author = {Bernhard, Michael and Nordstrom, Timothy and Reenock, Christopher},
-   title = {Economic Performance, Institutional Intermediation, and Democratic Survival},
-   journal = {Journal of Politics},
-   volume = {63},
-   number = {3},
-   pages = {775-803},
-   year = {2001},
-   doi = {10.1111/0022-3816.00087}
-}
-
-@techreport{bti2022,
-   author = {{Bertelsmann Stiftung}},
-   title = {Transformation Index of the Bertelsmann Stiftung 2022},
-   institution = {{Bertelsmann Stiftung}},
-   year = {2022}
-}
-
-
-@article{BollenPaxton2000,
-   author = {Bollen, Kenneth and Paxton, Pamela},
-   title = {Subjective Measures of Liberal Democracy},
-   journal = {Comparative Political Studies},
-   volume = {33},
-   number = {1},
-   pages = {58-86},
-   year = {2000},
-   doi = {10.1177/0010414000033001003}
-}
-
-@misc{Bollen2001,
-   author = {Bollen, Kenneth A.},
-   title = {Cross-National Indicators of Liberal Democracy, 1950-1990},
-   publisher = {Inter-university Consortium for Political and Social Research (ICPSR) [distributor]},
-   year = {2001},
-   type = {Data set}
-}
-
-@article{doorenspleet2000,
-   author = {Doorenspleet, Renske},
-   title = {Reassessing the Three Waves of Democratization},
-   journal = {World Politics},
-   volume = {52},
-   number = {03},
-   pages = {384-406},
-   year = {2000},
-   doi = {10.1017/S0043887100016580}
-}
-
-@techreport{fh2023,
-   author = {{Freedom House}},
-   title = {Freedom in the World 2023: Marking 50 Years in the Struggle for Democracy},
-   institution = {Freedom House},
-   url = {https://freedomhouse.org/report/freedom-world/2023/marking-50-years},
-   year = {2023}
-}
-
-@article{gwf2014,
-   author = {Geddes, Barbara and Wright, Joseph and Frantz, Erica},
-   title = {Autocratic Breakdown and Regime Transitions: A New Data Set},
-   journal = {Perspectives on Politics},
-   volume = {12},
-   number = {1},
-   doi = {10.1017/S1537592714000851},
-   pages = {313-331},
-   year = {2014}
-}
-
-@book{hadenius1992,
-   author = {Hadenius, Axel},
-   title = {Democracy and development},
-   publisher = {Cambridge University Press},
-   address = {New York},
-   year = {1992}
-}
-
-@article{Kailitz2013,
-   author = {Kailitz, Steffen},
-   title = {Classifying political regimes revisited: legitimation and durability},
-   journal = {Democratization},
-   volume = {20},
-   number = {1},
-   pages = {39-60},
-   doi = {10.1080/13510347.2013.738861},
-   year = {2013}
-}
-
-@Misc{MagaloniChuMin2013,
-  Title                    = {{Autocracies of the World, 1950-2012 (Version 1.0)}},
-  Author                   = {Magaloni, Beatriz and Chu, Jonathan and Min, Eric},
-  Year                     = {2013},
-  Type                     = {Dataset},
-  url = {http://cddrl.fsi.stanford.edu/research/autocracies_of_the_world_dataset}
-}
-
-@inbook{mainwaring2014,
-   author = {Mainwaring, Scott and P\'erez-Li\~{n}\'an, An\'ibal and Brinks, Daniel},
-   booktitle = {Democracies and Dictatorships in Latin America: Emergence, Survival, and Fall},
-   title = {Political Regimes in Latin America, 1900-2007 (with Daniel Brinks)},
-   chapter = {Political Regimes in Latin America, 1900-2007 (with Daniel Brinks)},
-   publisher = {Cambridge University Press},
-   address = {New York},
-   year = {2014}
-}
-
-@article{mainwaring2001,
-   author = {Mainwaring, Scott and Brinks, Daniel and P\'erez-Li\~{n}\'an, An\'ibal},
-   title = {Classifying Political Regimes in Latin America},
-   journal = {Studies in Comparative International Development},
-   volume = {36},
-   number = {1},
-   pages = {37-65},
-   year = {2001},
-   doi = {10.1007/bf02687584}
-}
-
-@book{munck2009,
-   author = {Munck, Gerardo},
-   title = {Measuring Democracy: A Bridge between Scholarship and Politics},
-   publisher = {The Johns Hopkins University Press},
-   address = {Baltimore},
-   year = {2009}
-}
-
-@article{pacl2010,
-   author = {Cheibub, Jos\'e and Gandhi, Jennifer and Vreeland, James},
-   title = {Democracy and dictatorship revisited},
-   journal = {Public Choice},
-   volume = {143},
-   number = {1},
-   pages = {67-101},
-   year = {2010},
-   doi = {10.1007/s11127-009-9491-2}
-}
-
-@article{pacl_update_2020,
-   author = {Bj{\o}rnskov, Christian and Rode, Martin},
-   title = {Regime types and regime change: A new dataset on democracy, coups, and political institutions},
-   journal = {The Review of International Organizations},
-   volume = {15},
-   number = {2},
-   pages = {531-551},
-   DOI = {10.1007/s11558-019-09345-1},
-   year = {2020}
-}
-
-
-@article{peps2006,
-   author = {Moon, Bruce E. and Birdsall, Jennifer Harvey and Ciesluk, Sylvia and Garlett, Lauren M. and Hermias, Joshua J. and Mendenhall, Elizabeth and Schmid, Patrick D. and Wong, Wai Hong},
-   title = {Voting Counts: Participation in the Measurement of Democracy},
-   journal = {Studies in Comparative International Development},
-   volume = {41},
-   number = {2},
-   pages = {3-32},
-   year = {2006},
-   doi = {10.1007/BF02686309}
-}
-
-@article{pitf2010,
-   author = {Goldstone, Jack and Bates, Robert and Epstein, David and Gurr, Ted and Lustik, Michael and Marshall, Monty and Ulfelder, Jay and Woodward, Mark},
-   title = {A Global Model for Forecasting Political Instability},
-   journal = {American Journal of Political Science},
-   volume = {54},
-   number = {1},
-   pages = {190-208},
-   year = {2010},
-   doi = {10.1111/j.1540-5907.2009.00426.x}
-}
-
-@article{pitf2015,
-   author = {Taylor, Sean J and Ulfelder, Jay},
-   title = {A Measurement Error Model of Dichotomous Democracy Status},
-   journal = {Available at SSRN},
-   year = {2015},
-   doi = {10.2139/ssrn.2726962}
-}
-
-@misc{ulfelder2012,
-   author = {Ulfelder, Jay},
-   title = {Democracy/Autocracy Data Set},
-   publisher = {Harvard Dataverse},
-   year = {2012},
-   url = {http://hdl.handle.net/1902.1/18836}
-}
-
-@article{ulfelder2007,
-   author = {Ulfelder, Jay and Lustik, Michael},
-   title = {Modelling Transitions To and From Democracy},
-   journal = {Democratization},
-   volume = {14},
-   number = {3},
-   pages = {351-387},
-   year = {2007},
-   doi = {10.1080/13510340701303196}
-}
-
-
-@manual{polity2019,
-   author = {Marshall, Monty G. and Gurr, Ted Robert and Jaggers, Keith},
-   title = {Polity IV Project: Political Regime Characteristics and Transitions, 1800-2018. Dataset Users' Manual.},
-   publisher = {Center for Systemic Peace},
-   year = {2019}
-}
-
-@manual{polity2020,
-   author = {Marshall, Monty G. and Gurr, Ted Robert},
-   title = {Polity 5: Political Regime Characteristics and Transitions, 1800-2018. Dataset Users' Manual.},
-   publisher = {Center for Systemic Peace},
-   year = {2020}
-}
-
-@article{polyarchy_dimensions2008,
-   author = {Coppedge, Michael and Alvarez, Angel and Maldonado, Claudia},
-   title = {Two Persistent Dimensions of Democracy: Contestation and Inclusiveness},
-   journal = {The journal of politics},
-   volume = {70},
-   number = {03},
-   pages = {632-647},
-   year = {2008},
-   doi = {10.1017/S0022381608080663}
-}
-
-@article{polyarchy1990,
-   author = {Coppedge, Michael and Reinicke, Wolfgang H.},
-   title = {Measuring Polyarchy},
-   journal = {Studies in Comparative International Development},
-   volume = {25},
-   number = {1},
-   pages = {51-72},
-   year = {1990},
-   doi = {10.1007/Bf02716905}
-}
-
-@article{prc_gasiorowski2002,
-   author = {Reich, G.},
-   title = {Categorizing Political Regimes: New Data for Old Problems},
-   journal = {Democratization},
-   volume = {9},
-   number = {4},
-   pages = {1-24},
-   year = {2002},
-   doi = {10.1080/714000289}
-}
-
-@article{prc_gasiorowski1996,
-   author = {Gasiorowski, Mark},
-   title = {An Overview of the Political Regime Change Dataset},
-   journal = {Comparative Political Studies},
-   volume = {29},
-   number = {4},
-   pages = {469-483},
-   year = {1996},
-   doi = {10.1177/0010414096029004004}
-}
-
-@Book{svolik2012,
-  Title                    = {{The Politics of Authoritarian Rule}},
-  Author                   = {Svolik, Milan},
-  Publisher                = {Cambridge University Press},
-  Year                     = {2012},
-  Address                  = {Cambridge}
-}
-
-@article{pmm2010uds2010,
-  Title                    = {{Democratic Compromise: A Latent Variable Analysis of Ten Measures of Regime Type}},
-  Author                   = {Pemstein, Daniel and Meserve, Stephen and Melton, James},
-  Journal                  = {Political Analysis},
-  Year                     = {2010},
-  Number                   = {4},
-  Pages                    = {426-449},
-  Volume                   = {18},
-  doi                      = {10.1093/pan/mpq020},
-}
-
-@misc{pmm2013uds2010,
-   author = {Pemstein, Daniel and Meserve, Stephen A. and Melton, James},
-   title = {Replication data for: Democratic Compromise: A Latent Variable Analysis of Ten Measures of Regime Type},
-   publisher = {Harvard Dataverse},
-   year = {2013},
-   url = {http://hdl.handle.net/1902.1/PMM}
-}
-
-@article{utip2008,
-   author = {Hsu, Sara},
-   title = {The Effect of Political Regimes on Inequality, 1963-2002},
-   journal = {UTIP Working Paper},
-   number = {53},
-   year = {2008},
-
-}
-
-@misc{vanhanen2019,
-   author = {Vanhanen, Tatu},
-   title = {Measures of Democracy 1810-2018 (dataset). Version 8.0 (2019-06-17).},
-   publisher = {Finnish Social Science Data Archive (distributor)},
-   address = {Tampere},
-   year = {2019},
-   url = {http://urn.fi/urn:nbn:fi:fsd:T-FSD1289}
-}
-
-@techreport{vdem13measurement,
-    author = {Pemstein, Daniel and Marquardt, Kyle L. and Tzelgov, Eitan and Wang, Yi-ting and Medzihorsky, Juraj and Krusell, Joshua and Miri, Farhad and von Römer, Johannes},
-    title = {{The V-Dem Measurement Model: Latent Variable Analysis for Cross-National and Cross-Temporal Expert-Coded Data}},
-    institution = {Varieties of Democracy Institute, University of Gothenburg},
-    year = {2022},
-    number = {21},
-    edition = {7th},
-    url = {https://www.v-dem.net/media/filer_public/25/cb/25cb3f3f-290d-46e1-8eaf-ff2d2c13f4a9/v-dem_working_paper_21.pdf}
-}
-
-@misc{vdem13codebook,
-    author = {Coppedge, Michael and Gerring, John and Knutsen, Carl Henrik and Lindberg, Staffan I. and Teorell, Jan and Altman, David and Bernhard, Michael and Cornell, Agnes and Fish, M. Steven and Gastaldi, Lisa and Gjerløw, Haakon and Glynn, Adam and Grahn, Sandra and Hicken, Allen and Kinzelbach, Katrin and Marquardt, Kyle L. and McMann, Kelly and Mechkova, Valeriya and Neundorf, Anja and Paxton, Pamela and Pemstein, Daniel and Rydén, Oskar and von Römer, Johannes and Seim, Brigitte and Sigman, Rachel and Skaaning, Svend-Erik and Staton, Jeffrey and Sundström, Aksel and Tzelgov, Eitan and Uberti, Luca and Wang, Yi-ting and Wig, Tore and Ziblatt, Daniel},
-    title = {{V-Dem Codebook v13}}},
-    year = {2023},
-    howpublished = {\url{https://www.v-dem.net/data/the-v-dem-dataset/}},
-    organization = {Varieties of Democracy (V-Dem) Project},
-}
-
-
-@article{wahman_teorell_hadenius2007,
-   author = {Hadenius, Axel and Teorell, Jan},
-   title = {Pathways from Authoritarianism},
-   journal = {Journal of Democracy},
-   volume = {18},
-   number = {1},
-   pages = {143-157},
-   year = {2007}
-}
-
-@Article{wahman_teorell_hadenius2013,
-  Title                    = {{Authoritarian Regime Types Revisited: Updated Data in Comparative Perspective}},
-  Author                   = {Wahman, Michael and Teorell, Jan and Hadenius, Axel},
-  Journal                  = {Contemporary Politics},
-  Year                     = {2013},
-  Number                   = {1},
-  Pages                    = {19-34},
-  Volume                   = {19},
-  url = {https://sites.google.com/site/authoritarianregimedataset/data}
-}
-
-@Misc{PIPE2013,
-  Title                    = {{Political Institutions and Political Events (PIPE) Data Set}},
-  Author                   = {Przeworski, Adam},
-  Year                     = {2013},
-  Publisher                = {Department of Politics, New York University},
-  Type                     = {Data set},
-  url = {https://sites.google.com/a/nyu.edu/adam-przeworski/home/data}
-}
-
-
-@article{Gleditsch1999,
-   author = {Gleditsch, Kristian and Ward, Michael D.},
-   title = {Interstate system membership: A revised list of independent states since the congress of Vienna},
-   journal = {International Interactions},
-   volume = {25},
-   number = {4},
-   pages = {393-413},
-   year = {1999},
-   doi = {10.1080/03050629908434958}
-}
-
-@misc{reign2016,
-   author = {Bell, Curtis},
-   title = {The Rulers, Elections, and Irregular Governance Dataset (REIGN)},
-   publisher = {OEF Research},
-   year = {2016},
-   url = {http://oefresearch.org/datasets/reign}
-}
-
-@misc{wgi2017,
-   author = {Kaufmann, Daniel and Kraay, Aart},
-   title = {Worldwide Governance Indicators},
-   publisher = {The World Bank Research Group},
-   year = {2020},
-   url = {http://www.govindicators.org}
-}
-
-@misc{marquez2020democracyData,
-   author = {M\'arquez, Xavier},
-   title = {democracyData: A package for accessing and manipulating existing measures of democracy.},
-   year = {2020},
-   url = {http://github.com/xmarquez/democracyData}
-}
-
-@techreport{eiu2023,
-   author = {{The Economist Intelligence Unit}},
-   title = {Democracy Index 2022: Frontline democracy and the battle for Ukraine},
-   institution = {{The Economist Intelligence Unit}},
-   year = {2023}
-}
-
-@article{svmdi2016,
-   author = {Gr\"{u}ndler, Klaus and Krieger, Tommy},
-   title = {Democracy and growth: Evidence from a machine learning indicator},
-   journal = {European Journal of Political Economy},
-   volume = {45},
-   pages = {85-107},
-   DOI = {https://doi.org/10.1016/j.ejpoleco.2016.05.005},
-   url = {http://www.sciencedirect.com/science/article/pii/S0176268016300222},
-   year = {2016},
-   type = {Journal Article}
-}
-
-@techreport{svmdi2018,
-   author = {Gr\"{u}ndler, Klaus and Krieger, Tommy},
-   title = {Machine Learning Indices, Political Institutions, and Economic Development},
-   institution = {CESifo Group Munich},
-   year = {2018},
-   type = {Report},
-   url = {https://www.cesifo-group.de/DocDL/cesifo1_wp6930.pdf}
+  type = {Journal {{Article}}},
+  title = {Classifying Political Regimes 1800-2016: A Typology and a New Dataset},
+  author = {Anckar, Carsten and Fredriksson, Cecilia},
+  year = {2018},
+  journal = {European Political Science},
+  doi = {10.1057/s41304-018-0149-8}
 }
 
 @article{anrr2019,
-   author = {Acemoglu, Daron and Naidu, Suresh and Restrepo, Pascual and Robinson, James A.},
-   title = {Democracy Does Cause Growth},
-   journal = {Journal of Political Economy},
-   volume = {127},
-   number = {1},
-   pages = {47-100},
-   DOI = {10.1086/700936},
-   url = {https://www.journals.uchicago.edu/doi/10.1086/700936},
-   year = {2019}
+  title = {Democracy Does Cause Growth},
+  author = {Acemoglu, Daron and Naidu, Suresh and Restrepo, Pascual and Robinson, James A.},
+  year = {2019},
+  journal = {Journal of Political Economy},
+  volume = {127},
+  number = {1},
+  pages = {47--100},
+  doi = {10.1086/700936}
 }
 
-@article{svmdi2021,
-   author = {Gr\"{u}ndler, Klaus and Krieger, Tommy},
-   title = {Using Machine Learning for measuring democracy: A practitioners guide and a new updated dataset for 186 countries from 1919 to 2019},
-   journal = {European Journal of Political Economy},
-   pages = {102-47},
-   DOI = {https://doi.org/10.1016/j.ejpoleco.2021.102047},
-   year = {2021}
+@book{Arat1991,
+  title = {Democracy and Human Rights in Developing Countries},
+  author = {Arat, Zehra F.},
+  year = {1991},
+  publisher = {Lynne Rienner Publishers},
+  address = {Boulder}
+}
+
+@article{blm2005,
+  title = {Measuring Political Democracy: {{Case}} Expertise, Data Adequacy, and Central America},
+  author = {Bowman, Kirk and Lehoucq, Fabrice and Mahoney, James},
+  year = {2005},
+  journal = {Comparative Political Studies},
+  volume = {38},
+  number = {8},
+  pages = {939--970},
+  doi = {10.1177/0010414005277083}
+}
+
+@article{bmr2007,
+  title = {A Complete Dataset of Political Regimes, 1800-2007},
+  author = {Boix, Carles and Miller, Michael and Rosato, Sebastian},
+  year = {2012},
+  journal = {Comparative Political Studies},
+  volume = {46},
+  number = {12},
+  pages = {1523--1554},
+  doi = {10.1177/0010414012463905}
+}
+
+@article{bnr2001,
+  title = {Economic Performance, Institutional Intermediation, and Democratic Survival},
+  author = {Bernhard, Michael and Nordstrom, Timothy and Reenock, Christopher},
+  year = {2001},
+  journal = {Journal of Politics},
+  volume = {63},
+  number = {3},
+  pages = {775--803},
+  doi = {10.1111/0022-3816.00087}
+}
+
+@misc{Bollen2001,
+  type = {Data Set},
+  title = {Cross-National Indicators of Liberal Democracy, 1950-1990},
+  author = {Bollen, Kenneth A.},
+  year = {2001},
+  publisher = {{Inter-university Consortium for Political and Social Research (ICPSR) [distributor]}}
+}
+
+@article{BollenPaxton2000,
+  title = {Subjective Measures of Liberal Democracy},
+  author = {Bollen, Kenneth and Paxton, Pamela},
+  year = {2000},
+  journal = {Comparative Political Studies},
+  volume = {33},
+  number = {1},
+  pages = {58--86},
+  doi = {10.1177/0010414000033001003}
+}
+
+@techreport{bti2022,
+  title = {Transformation Index of the Bertelsmann Stiftung 2022},
+  author = {{Bertelsmann Stiftung}},
+  year = {2022},
+  institution = {Bertelsmann Stiftung}
+}
+
+@article{doorenspleet2000,
+  title = {Reassessing the Three Waves of Democratization},
+  author = {Doorenspleet, Renske},
+  year = {2000},
+  journal = {World Politics},
+  volume = {52},
+  number = {03},
+  pages = {384--406},
+  doi = {10.1017/S0043887100016580}
+}
+
+@techreport{eiu2023,
+  title = {Democracy Index 2022: {{Frontline}} Democracy and the Battle for Ukraine},
+  author = {{The Economist Intelligence Unit}},
+  year = {2023},
+  institution = {The Economist Intelligence Unit}
 }
 
 @article{extended_uds_marquez,
-   author = {Marquez, Xavier},
-   title = {A Quick Method for Extending the Unified Democracy Scores},
-   journal = {Available at SSRN 2753830},
-   year = {2016},
-   type = {Journal Article},
-   url = {https://papers.ssrn.com/sol3/papers.cfm?abstract_id=2753830}
+  type = {Journal {{Article}}},
+  title = {A Quick Method for Extending the Unified Democracy Scores},
+  author = {Marquez, Xavier},
+  year = {2016},
+  journal = {Available at SSRN 2753830}
+}
+
+@techreport{fh2024,
+  title = {Freedom in the World 2024: {{The Mounting Damage}} of {{Flawed Elections}} and {{Armed Conflict}}},
+  author = {{Freedom House}},
+  year = {2024},
+  institution = {Freedom House}
+}
+
+@article{Gleditsch1999,
+  title = {Interstate System Membership: {{A}} Revised List of Independent States since the Congress of {{Vienna}}},
+  author = {Gleditsch, Kristian and Ward, Michael D.},
+  year = {1999},
+  journal = {International Interactions},
+  volume = {25},
+  number = {4},
+  pages = {393--413},
+  doi = {10.1080/03050629908434958}
+}
+
+@article{gwf2014,
+  title = {Autocratic Breakdown and Regime Transitions: A New Data Set},
+  author = {Geddes, Barbara and Wright, Joseph and Frantz, Erica},
+  year = {2014},
+  journal = {Perspectives on Politics},
+  volume = {12},
+  number = {1},
+  pages = {313--331},
+  doi = {10.1017/S1537592714000851}
+}
+
+@book{hadenius1992,
+  title = {Democracy and Development},
+  author = {Hadenius, Axel},
+  year = {1992},
+  publisher = {Cambridge University Press},
+  address = {New York}
+}
+
+@article{Kailitz2013,
+  title = {Classifying Political Regimes Revisited: Legitimation and Durability},
+  author = {Kailitz, Steffen},
+  year = {2013},
+  journal = {Democratization},
+  volume = {20},
+  number = {1},
+  pages = {39--60},
+  doi = {10.1080/13510347.2013.738861}
+}
+
+@article{LIED2015,
+  title = {A Lexical Index of Electoral Democracy},
+  author = {Skaaning, Svend-Erik and Gerring, John and Bartusevičius, Henrikas},
+  year = {2015},
+  journal = {Comparative Political Studies},
+  volume = {48},
+  number = {12},
+  pages = {1491--1525},
+  doi = {10.1177/0010414015581050}
+}
+
+@misc{MagaloniChuMin2013,
+  type = {Dataset},
+  title = {Autocracies of the World, 1950-2012 (Version 1.0)},
+  author = {Magaloni, Beatriz and Chu, Jonathan and Min, Eric},
+  year = {2013}
+}
+
+@article{mainwaring2001,
+  title = {Classifying Political Regimes in Latin America},
+  author = {Mainwaring, Scott and Brinks, Daniel and {Pérez-Liñán}, Aníbal},
+  year = {2001},
+  journal = {Studies in Comparative International Development},
+  volume = {36},
+  number = {1},
+  pages = {37--65},
+  doi = {10.1007/bf02687584}
+}
+
+@incollection{mainwaring2014,
+  title = {Political Regimes in Latin America, 1900-2007 (with Daniel Brinks)},
+  booktitle = {Democracies and Dictatorships in Latin America: {{Emergence}}, Survival, and Fall},
+  author = {Mainwaring, Scott and {Pérez-Liñán}, Aníbal and Brinks, Daniel},
+  year = {2014},
+  publisher = {Cambridge University Press},
+  address = {New York},
+  chapter = {Political Regimes in Latin America, 1900-2007 (with Daniel Brinks)}
+}
+
+@misc{marquez2020democracyData,
+  title = {{{democracyData}}: {{A}} Package for Accessing and Manipulating Existing Measures of Democracy.},
+  author = {Márquez, Xavier},
+  year = {2020}
+}
+
+@book{munck2009,
+  title = {Measuring Democracy: A Bridge between Scholarship and Politics},
+  author = {Munck, Gerardo},
+  year = {2009},
+  publisher = {The Johns Hopkins University Press},
+  address = {Baltimore}
+}
+
+@article{pacl_update_2020,
+  title = {Regime Types and Regime Change: {{A}} New Dataset on Democracy, Coups, and Political Institutions},
+  author = {Bjørnskov, Christian and Rode, Martin},
+  year = {2020},
+  journal = {The Review of International Organizations},
+  volume = {15},
+  number = {2},
+  pages = {531--551},
+  doi = {10.1007/s11558-019-09345-1}
+}
+
+@article{pacl2010,
+  title = {Democracy and Dictatorship Revisited},
+  author = {Cheibub, José and Gandhi, Jennifer and Vreeland, James},
+  year = {2010},
+  journal = {Public Choice},
+  volume = {143},
+  number = {1},
+  pages = {67--101},
+  doi = {10.1007/s11127-009-9491-2}
+}
+
+@article{peps2006,
+  title = {Voting Counts: {{Participation}} in the Measurement of Democracy},
+  author = {Moon, Bruce E. and Birdsall, Jennifer Harvey and Ciesluk, Sylvia and Garlett, Lauren M. and Hermias, Joshua J. and Mendenhall, Elizabeth and Schmid, Patrick D. and Wong, Wai Hong},
+  year = {2006},
+  journal = {Studies in Comparative International Development},
+  volume = {41},
+  number = {2},
+  pages = {3--32},
+  doi = {10.1007/BF02686309}
+}
+
+@misc{PIPE2013,
+  type = {Data Set},
+  title = {Political Institutions and Political Events ({{PIPE}}) Data Set},
+  author = {Przeworski, Adam},
+  year = {2013},
+  publisher = {Department of Politics, New York University}
+}
+
+@article{pitf2010,
+  title = {A Global Model for Forecasting Political Instability},
+  author = {Goldstone, Jack and Bates, Robert and Epstein, David and Gurr, Ted and Lustik, Michael and Marshall, Monty and Ulfelder, Jay and Woodward, Mark},
+  year = {2010},
+  journal = {American Journal of Political Science},
+  volume = {54},
+  number = {1},
+  pages = {190--208},
+  doi = {10.1111/j.1540-5907.2009.00426.x}
+}
+
+@article{pitf2015,
+  title = {A Measurement Error Model of Dichotomous Democracy Status},
+  author = {Taylor, Sean J and Ulfelder, Jay},
+  year = {2015},
+  journal = {Available at SSRN},
+  doi = {10.2139/ssrn.2726962}
+}
+
+@article{pmm2010uds2010,
+  title = {Democratic Compromise: A Latent Variable Analysis of Ten Measures of Regime Type},
+  author = {Pemstein, Daniel and Meserve, Stephen and Melton, James},
+  year = {2010},
+  journal = {Political Analysis},
+  volume = {18},
+  number = {4},
+  pages = {426--449},
+  doi = {10.1093/pan/mpq020}
+}
+
+@misc{pmm2013uds2010,
+  title = {Replication Data for: {{Democratic}} Compromise: A Latent Variable Analysis of Ten Measures of Regime Type},
+  author = {Pemstein, Daniel and Meserve, Stephen A. and Melton, James},
+  year = {2013},
+  publisher = {Harvard Dataverse}
+}
+
+@manual{polity2019,
+  type = {Manual},
+  title = {Polity {{IV}} Project: {{Political}} Regime Characteristics and Transitions, 1800-2018. {{Dataset}} Users' Manual.},
+  author = {Marshall, Monty G. and Gurr, Ted Robert and Jaggers, Keith},
+  year = {2019},
+  institution = {Center for Systemic Peace}
+}
+
+@manual{polity2020,
+  type = {Manual},
+  title = {Polity 5: {{Political}} Regime Characteristics and Transitions, 1800-2018. {{Dataset}} Users' Manual.},
+  author = {Marshall, Monty G. and Gurr, Ted Robert},
+  year = {2020},
+  institution = {Center for Systemic Peace}
+}
+
+@article{polyarchy_dimensions2008,
+  title = {Two Persistent Dimensions of Democracy: {{Contestation}} and Inclusiveness},
+  author = {Coppedge, Michael and Alvarez, Angel and Maldonado, Claudia},
+  year = {2008},
+  journal = {The journal of politics},
+  volume = {70},
+  number = {03},
+  pages = {632--647},
+  doi = {10.1017/S0022381608080663}
+}
+
+@article{polyarchy1990,
+  title = {Measuring Polyarchy},
+  author = {Coppedge, Michael and Reinicke, Wolfgang H.},
+  year = {1990},
+  journal = {Studies in Comparative International Development},
+  volume = {25},
+  number = {1},
+  pages = {51--72},
+  doi = {10.1007/Bf02716905}
+}
+
+@article{prc_gasiorowski1996,
+  title = {An Overview of the Political Regime Change Dataset},
+  author = {Gasiorowski, Mark},
+  year = {1996},
+  journal = {Comparative Political Studies},
+  volume = {29},
+  number = {4},
+  pages = {469--483},
+  doi = {10.1177/0010414096029004004}
+}
+
+@article{prc_gasiorowski2002,
+  title = {Categorizing Political Regimes: {{New}} Data for Old Problems},
+  author = {Reich, G.},
+  year = {2002},
+  journal = {Democratization},
+  volume = {9},
+  number = {4},
+  pages = {1--24},
+  doi = {10.1080/714000289}
+}
+
+@misc{reign2016,
+  title = {The Rulers, Elections, and Irregular Governance Dataset ({{REIGN}})},
+  author = {Bell, Curtis},
+  year = {2016},
+  publisher = {OEF Research}
+}
+
+@article{svmdi2016,
+  type = {Journal {{Article}}},
+  title = {Democracy and Growth: {{Evidence}} from a Machine Learning Indicator},
+  author = {Gründler, Klaus and Krieger, Tommy},
+  year = {2016},
+  journal = {European Journal of Political Economy},
+  volume = {45},
+  pages = {85--107},
+  doi = {10.1016/j.ejpoleco.2016.05.005}
+}
+
+@techreport{svmdi2018,
+  type = {Report},
+  title = {Machine Learning Indices, Political Institutions, and Economic Development},
+  author = {Gründler, Klaus and Krieger, Tommy},
+  year = {2018},
+  institution = {CESifo Group Munich}
+}
+
+@article{svmdi2021,
+  title = {Using {{Machine Learning}} for Measuring Democracy: {{A}} Practitioners Guide and a New Updated Dataset for 186 Countries from 1919 to 2019},
+  author = {Gründler, Klaus and Krieger, Tommy},
+  year = {2021},
+  journal = {European Journal of Political Economy},
+  pages = {102--47},
+  doi = {10.1016/j.ejpoleco.2021.102047}
+}
+
+@book{svolik2012,
+  title = {The Politics of Authoritarian Rule},
+  author = {Svolik, Milan},
+  year = {2012},
+  publisher = {Cambridge University Press},
+  address = {Cambridge}
+}
+
+@article{ulfelder2007,
+  title = {Modelling Transitions to and from Democracy},
+  author = {Ulfelder, Jay and Lustik, Michael},
+  year = {2007},
+  journal = {Democratization},
+  volume = {14},
+  number = {3},
+  pages = {351--387},
+  doi = {10.1080/13510340701303196}
+}
+
+@misc{ulfelder2012,
+  title = {Democracy/Autocracy Data Set},
+  author = {Ulfelder, Jay},
+  year = {2012},
+  publisher = {Harvard Dataverse}
+}
+
+@article{utip2008,
+  title = {The Effect of Political Regimes on Inequality, 1963-2002},
+  author = {Hsu, Sara},
+  year = {2008},
+  journal = {UTIP Working Paper},
+  number = {53}
+}
+
+@misc{vanhanen2019,
+  title = {Measures of Democracy 1810-2018 (Dataset). {{Version}} 8.0 (2019-06-17).},
+  author = {Vanhanen, Tatu},
+  year = {2019},
+  publisher = {Finnish Social Science Data Archive (distributor)},
+  address = {Tampere}
+}
+
+@misc{vdem13codebook,
+  title = {V-Dem Codebook V13},
+  author = {Coppedge, Michael and Gerring, John and Knutsen, Carl Henrik and Lindberg, Staffan I. and Teorell, Jan and Altman, David and Bernhard, Michael and Cornell, Agnes and Fish, M. Steven and Gastaldi, Lisa and Gjerløw, Haakon and Glynn, Adam and Grahn, Sandra and Hicken, Allen and Kinzelbach, Katrin and Marquardt, Kyle L. and McMann, Kelly and Mechkova, Valeriya and Neundorf, Anja and Paxton, Pamela and Pemstein, Daniel and Rydén, Oskar and {von Römer}, Johannes and Seim, Brigitte and Sigman, Rachel and Skaaning, Svend-Erik and Staton, Jeffrey and Sundström, Aksel and Tzelgov, Eitan and Uberti, Luca and Wang, Yi-ting and Wig, Tore and Ziblatt, Daniel}
+}
+
+@techreport{vdem13measurement,
+  title = {The V-Dem Measurement Model: {{Latent}} Variable Analysis for Cross-National and Cross-Temporal Expert-Coded Data},
+  author = {Pemstein, Daniel and Marquardt, Kyle L. and Tzelgov, Eitan and Wang, Yi-ting and Medzihorsky, Juraj and Krusell, Joshua and Miri, Farhad and {von Römer}, Johannes},
+  year = {2022},
+  edition = {7th},
+  number = {21},
+  institution = {Varieties of Democracy Institute, University of Gothenburg}
+}
+
+@article{wahman_teorell_hadenius2007,
+  title = {Pathways from Authoritarianism},
+  author = {Hadenius, Axel and Teorell, Jan},
+  year = {2007},
+  journal = {Journal of Democracy},
+  volume = {18},
+  number = {1},
+  pages = {143--157}
+}
+
+@article{wahman_teorell_hadenius2013,
+  title = {Authoritarian Regime Types Revisited: {{Updated}} Data in Comparative Perspective},
+  author = {Wahman, Michael and Teorell, Jan and Hadenius, Axel},
+  year = {2013},
+  journal = {Contemporary Politics},
+  volume = {19},
+  number = {1},
+  pages = {19--34}
+}
+
+@misc{wgi2017,
+  title = {Worldwide Governance Indicators},
+  author = {Kaufmann, Daniel and Kraay, Aart},
+  year = {2020},
+  publisher = {The World Bank Research Group}
 }
